completed part 6 of the gatsby tutorial

--- a/blog/lightfall-launch.mdx
+++ b/blog/lightfall-launch.mdx
@@ -4,7 +4,7 @@ date: '2023-02-28'
 slug: 'lightfall-launch'
 ---
 
-# Destiny 2 Lightfall Launches Tody
+# Destiny 2 Lightfall Launches Today
 
 I bet it's going to be **great**!
 
