--- a/blog/vexcalibur-exotic.mdx
+++ b/blog/vexcalibur-exotic.mdx
@@ -8,4 +8,4 @@ slug: 'vexcalibur'
 
 The newest glaive exotic, Vexcalibur, was acquired in a new mission.
 
-![Vexcalibur!](https://www.gamespot.com/a/uploads/original/1748/17481584/4109150-3-7-2023_7-03-28_pm-3p2nbuyd.png 'Vexcalibur Glaive')
+![Vexcalibur!](https://i.ibb.co/MRtBH3r/vex.png 'Vexcalibur Glaive')
